k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alod-ch
  annotations:
    external-dns.alpha.kubernetes.io/hostname: alod-ch.zazukoians.org,isil-ch.zazukoians.org
    traefik.ingress.kubernetes.io/frontend-entry-points: http
spec:
  rules:
  - host: alod.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
  - host: data.alod.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
  - host: data.bs.alod.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
  - host: data.ge.alod.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
  - host: data.helveticarchives.alod.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
  - host: data.ne.alod.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
  - host: data.vs.alod.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
  - host: test.alod.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
  - host: www.alod.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
  - host: isil.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
  - host: data.staatsarchiv-bs.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish
          servicePort: 80
